--- a/css/contact.css
+++ b/css/contact.css
@@ -164,7 +164,9 @@ nav .menu ul li {
     font-style: 20px;
     color: #ff4242;
     background: #ff42421c;
-    padding: 10px 20px;
+    padding: 10px 102px;
+    text-align: center;
+    
 }
 
 .content {
@@ -200,27 +202,36 @@ nav .menu ul li {
     border: 1px solid #ff4242;
     padding: 0 10px;
     font-size: 17px;
+     color: lightgrey;
     margin: 20px  10px;
 }
 
 textarea {
     border: none;
-    background: #333;
+    background: #222;
     padding: 10px;
     margin: 10px 10px 30px 10px;
     font-size: 18px;
-    max-width: 600px;
+    color: lightgrey;
+  resize: none;
     min-width: 350px;
+    max-height: 150px;
+    border: 1px solid #ff4242 
+    
 }
 
 .content .btn{
-    font-size: 30px;
+    font-size: 25px;
     color: #ff4242;
     border: 1px solid #ff4242;
     background: #ff424213;
-    
+    width: 350px;
+    margin: 0 auto;
+    cursor: pointer;
     text-align: center;
+    padding: 5px;
 }
+
 
 #fname {
     position: relative;
@@ -249,7 +260,7 @@ textarea {
 #fname input:valid+span:before {
     content: 'First Name';
     position: absolute;
-    top: 0px;
+    top: -1px;
     left: 2px;
     color: #ff4242;
     transition: .5s;
@@ -273,7 +284,7 @@ textarea {
 #lname input:focus+span:before {
     content: 'Last Name';
     position: absolute;
-    top: 0px;
+    top: -1px;
     left: 2px;
     color: #ff4242;
     transition: .5s;
@@ -282,7 +293,7 @@ textarea {
 #lname input:valid+span:before {
     content: 'Last Name';
     position: absolute;
-    top: 0px;
+    top: -1px;
     left: 2px;
     color: #ff4242;
     transition: .5s;
@@ -306,7 +317,7 @@ textarea {
 #email input:focus+span:before {
     content: 'E-mail';
     position: absolute;
-    top: 0px;
+    top: -1px;
     left: 2px;
     color: #ff4242;
     transition: .5s;
@@ -315,7 +326,7 @@ textarea {
 #email input:valid+span:before {
     content: 'E-mail';
     position: absolute;
-    top: 0px;
+    top: -1px;
     left: 2px;
     color: #ff4242;
     transition: .5s;
@@ -340,7 +351,7 @@ textarea {
 #subject input:focus+span:before {
     content: 'Subject';
     position: absolute;
-    top: 0px;
+    top: -1px;
     left: 2px;
     color: #ff4242;
     transition: .5s;
@@ -349,7 +360,7 @@ textarea {
 #subject input:valid+span:before {
     content: 'Subject';
     position: absolute;
-    top: 0px;
+    top: -1px;
     left: 2px;
     color: #ff4242;
     transition: .5s;
@@ -363,10 +374,12 @@ textarea {
 #msg textarea+span::before {
     content: 'Message';
     position: absolute;
-    top: 00px;
-    left: 10px;
-    background: #333;
+    top: -1px;
+    left:20px;
+    background: #222;
     transition: .5s;
+    
+
     padding: 0 10px;
     color: #ff4242;
 }
@@ -374,8 +387,8 @@ textarea {
 #msg textarea:focus+span::before {
     content: 'Message';
     position: absolute;
-    top: 27px;
-    left: 2px;
+    top: -11px;
+    left: 0px;
     color: #ff4242;
     transition: .5s;
 }
@@ -384,7 +397,7 @@ textarea {
 #msg textarea:valid+span::before {
     content: 'Message';
     position: absolute;
-    top: 27px;
+    top: -15px;
     left: 2px;
     color: #ff4242;
     transition: .5s;
@@ -399,6 +412,10 @@ textarea {
     }
     .section-1{
         width: 90%;
+    }
+    .content .btn{
+        width: 100%;
+        max-width: 350px;
     }
 }
 
